--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -3,9 +3,8 @@ name: Copy commit files
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'scripts/**'
-      - 'yaml/**'
+    paths-ignore:
+      - '.commits/**'
 
 jobs:
   copy-commit-files:
